@@ -10,6 +10,7 @@ import com.azure.core.implementation.AccessibleByteArrayOutputStream;
 import com.azure.core.models.GeoObjectType;
 import com.azure.core.models.JsonPatchDocument;
 import com.azure.core.util.DateTimeRfc1123;
+import com.azure.core.util.UrlBuilder;
 import com.azure.core.util.serializer.CollectionFormat;
 import com.azure.core.util.serializer.SerializerAdapter;
 import com.azure.core.util.serializer.SerializerEncoding;
@@ -27,6 +28,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
@@ -336,7 +338,7 @@ public class JacksonAdapterTests {
         }
     }
 
-    private static Stream<Arguments> textDeserializationSupplier() throws MalformedURLException {
+    private static Stream<Arguments> textDeserializationSupplier() throws MalformedURLException, URISyntaxException {
         byte[] helloBytes = "hello".getBytes(StandardCharsets.UTF_8);
         String urlUri = "https://azure.com";
         byte[] urlUriBytes = urlUri.getBytes(StandardCharsets.UTF_8);
@@ -367,8 +369,8 @@ public class JacksonAdapterTests {
             Arguments.of("1".getBytes(StandardCharsets.UTF_8), byte[].class, "1".getBytes(StandardCharsets.UTF_8)),
             Arguments.of("true".getBytes(StandardCharsets.UTF_8), boolean.class, true),
             Arguments.of("true".getBytes(StandardCharsets.UTF_8), Boolean.class, true),
-            Arguments.of(urlUriBytes, URL.class, new URL(urlUri)),
-            Arguments.of(urlUriBytes, URI.class, URI.create(urlUri)),
+            Arguments.of(urlUriBytes, URL.class, UrlBuilder.parse(urlUri).toUrl()),
+            Arguments.of(urlUriBytes, URI.class, new URI(urlUri)),
             Arguments.of(getObjectBytes(offsetDateTime), OffsetDateTime.class, offsetDateTime),
             Arguments.of(getObjectBytes(dateTimeRfc1123), DateTimeRfc1123.class, dateTimeRfc1123),
             Arguments.of(getObjectBytes(localDate), LocalDate.class, localDate),
